--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,25 @@
 page-home {
-
+  display: flex;
 }
+.nav_content {
+  display: flex;
+  flex-direction: row;
+}
+.logo {
+  display: flex;
+  flex: 1 1;
+}
+.main_nav {
+  display: flex;
+  flex: 3 3;
+  justify-content: flex-start;
+  align-items: center;
+}
+.main_nav_tabs {
+  width: 80px;
+  height: 20px;
+}
+.sign_in{
+  display: flex;
+}
+
